--- a/src/PBlondeau/Bundle/NewsBundle/Resources/views/News/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/NewsBundle/Resources/views/News/Admin/index.html.twig
@@ -17,24 +17,21 @@
         </div>
     </div>
 
-    <table class="table table-striped table-hover table-sortable">
+    <table class="table table-striped table-hover">
         <thead>
             <tr>
                 <th>{{ 'list.news.header.image' | trans({}) }}</th>
                 <th>{{ 'list.news.header.title' | trans({}) }}</th>
-	            <th>{{ 'list.news.header.position' | trans({}) }}</th>
                 <th>{{ 'list.news.header.status' | trans({}) }}</th>
                 <th>{{ 'list.news.header.creation' | trans({}) }}</th>
                 <th>{{ 'list.news.header.actions' | trans({}) }}</th>
             </tr>
         </thead>
 
-        <tbody data-action="{{ path('admin_news_update_positions') }}">
+        <tbody>
             {% for news in newsList %}
-                <tr id="entity-{{ news.id }}" data-id="{{ news.id }}"
-                        class="{% if news.isStopped %}sortable-disabled{% endif %}">
+                <tr id="entity-{{ news.id }}" data-id="{{ news.id }}">
                     <td class="preview">
-                        <span class="fa fa-arrows-v margin-x {% if news.isStopped %}invisible{% endif %}"></span>
                         <img src="{{ asset(news.webPath) }}" class="img-responsive img-thumbnail" alt="" />
                     </td>
                     <td class="title" width="40%">
@@ -42,9 +39,6 @@
                             {{ news.title|truncate(55) }}
                         </span>
                     </td>
-	                <td class="position">
-		                {{ news.position }}
-	                </td>
                     <td>
                         <span class="badge status-{{ news.status }}">
                             {{ ('list.news.body.status.' ~ news.status) | trans({}) }}
