--- a/app/Resources/views/components/_stylesheets.html.twig
+++ b/app/Resources/views/components/_stylesheets.html.twig
@@ -1,5 +1,6 @@
-<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
-<link rel="stylesheet" href="{{ asset('css/font-awesome.min.css') }}" />
-<link rel="stylesheet" href="{{ asset('css/jquery-ui/jquery-ui.min.css') }}" />
-<link rel="stylesheet" href="{{ asset('css/chosen/chosen.min.css') }}" />
-<link rel="stylesheet" href="{{ asset('css/main.css') }}" />
+<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" media="screen" />
+<link rel="stylesheet" href="{{ asset('css/font-awesome.min.css') }}" media="screen" />
+<link rel="stylesheet" href="{{ asset('css/jquery-ui/jquery-ui.min.css') }}" media="screen" />
+<link rel="stylesheet" href="{{ asset('css/chosen/chosen.min.css') }}" media="screen" />
+<link rel="stylesheet" href="{{ asset('css/main.css') }}" media="screen" />
+<link rel="stylesheet" href="{{ asset('css/form.css') }}?1" media="screen" />
