--- a/src/PBlondeau/Bundle/WorkBundle/Resources/views/Photo/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/WorkBundle/Resources/views/Photo/Admin/index.html.twig
@@ -1,16 +1,30 @@
 {% extends "::layout.html.twig" %}
 
-{% trans_default_domain "adminWorkAlbum" %}
+{% trans_default_domain "adminWorkPhoto" %}
 
 {% block body %}
-     <div class="row">
+
+    <div class="row margin-bottom">
+        <div class="col-md-2">
+            <a href="{{ path('admin_work_albums') }}"
+               title="{{ 'list.photo.back-to-albums' | trans({}) }}">
+                <span class="fa fa-chevron-left"></span>
+                {{ 'list.photo.back-to-albums' | trans({}) }}
+            </a>
+        </div>
+        <h3 class="col-md-8 text-center margin-top-none">
+            {{ album.title }}
+        </h3>
+    </div>
+
+    <div class="row">
         <div class="col-md-10 padding-left">
-            <h4>{{ 'list.album.count' | trans({'%numberOfAlbums%': albums.getTotalItemCount}) }}</h4>
+            <h4>{{ 'list.photo.count' | trans({'%numberOfPhotos%': photos.getTotalItemCount}) }}</h4>
         </div>
 
         <div class="col-md-2 text-right">
             <button class="btn btn-default create-entity"
-                    data-action="{{ path('admin_work_albums_create') }}"
+                    data-action=""
                     data-title="{{ 'form.create.title' | trans({})  }}">
                 <span class="fa fa-plus"></span>{{ 'list.action.add' | trans({}) }}
             </button>
@@ -20,53 +34,40 @@
     <table class="table table-striped table-hover table-sortable">
         <thead>
             <tr>
-                <th>{{ 'list.album.header.cover' | trans({}) }}</th>
-                <th>{{ 'list.album.header.title' | trans({}) }}</th>
-	            <th>{{ 'list.album.header.position' | trans({}) }}</th>
-                <th>{{ 'list.album.header.status' | trans({}) }}</th>
-                <th>{{ 'list.album.header.creation' | trans({}) }}</th>
-                <th>{{ 'list.album.header.actions' | trans({}) }}</th>
+                <th>{{ 'list.photo.header.cover' | trans({}) }}</th>
+	            <th>{{ 'list.photo.header.position' | trans({}) }}</th>
+                <th>{{ 'list.photo.header.status' | trans({}) }}</th>
+                <th>{{ 'list.photo.header.creation' | trans({}) }}</th>
+                <th>{{ 'list.photo.header.actions' | trans({}) }}</th>
             </tr>
         </thead>
 
-        <tbody data-action="{{ path('admin_work_albums_update_positions') }}">
-            {% for album in albums %}
-                <tr id="entity-{{ album.id }}" data-id="{{ album.id }}"
-                        class="{% if album.isStopped %}sortable-disabled{% endif %}">
+        <tbody data-action="{{ path('admin_work_album_photos_update_positions', {'id': album.id}) }}">
+            {% for photo in photos %}
+                <tr id="entity-{{ photo.id }}" data-id="{{ photo.id }}"
+                        class="{% if photo.isStopped %}sortable-disabled{% endif %}">
                     <td class="preview">
-                        <span class="fa fa-arrows-v margin-x {% if album.isStopped %}invisible{% endif %}"></span>
-                        <img src="{{ asset(album.webPath) }}" class="img-responsive img-thumbnail" alt="" />
-                    </td>
-                    <td class="title" width="40%">
-                        <span title="{{ album.title }}">
-                            {{ album.title|truncate(55) }}
-                        </span>
+                        <span class="fa fa-arrows-v margin-x {% if photo.isStopped %}invisible{% endif %}"></span>
+                        <img src="{{ asset(photo.webPath) }}" class="img-responsive img-thumbnail" alt="" />
                     </td>
 	                <td class="position">
-		                {{ album.position }}
+		                {{ photo.position }}
 	                </td>
                     <td>
-                        <span class="badge status-{{ album.status }}">
-                            {{ ('list.album.body.status.' ~ album.status) | trans({}) }}
+                        <span class="badge status-{{ photo.status }}">
+                            {{ ('list.photo.body.status.' ~ photo.status) | trans({}) }}
                         </span>
                     </td>
-                    <td>{{ album.creation|date('d-m-Y') }}</td>
+                    <td>{{ photo.creation|date('d-m-Y') }}</td>
                     <td>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="edit-entity" title="{{ 'list.album.body.action.edit' | trans({}) }}"
-                                        data-action="{{ path('admin_work_albums_edit', {'id': album.id}) }}"
-                                        data-title="{{ 'form.update.title' | trans({})  }}">
-                                    <span class="fa fa-pencil"></span>{{ 'list.album.body.action.edit' | trans({}) }}</a>
-                            </li>
-
-                            <li>
-                                <button class="btn btn-link" data-toggle="modal" data-target="#delete-modal-{{ album.id }}">
-                                    <span class="fa fa-times-circle"></span>{{ 'list.album.body.action.delete' | trans({}) }}
+                                <button class="btn btn-link" data-toggle="modal" data-target="#delete-modal-{{ photo.id }}">
+                                    <span class="fa fa-times-circle"></span>{{ 'list.photo.body.action.delete' | trans({}) }}
                                 </button>
 
-                                <div id="delete-modal-{{ album.id }}" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-                                    {% include "PBlondeauWorkBundle:Album/Admin:deleteModal.html.twig" %}
+                                <div id="delete-modal-{{ photo.id }}" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+                                    {% include "PBlondeauWorkBundle:Photo/Admin:deleteModal.html.twig" %}
                                 </div>
                             </li>
                         </ul>
@@ -74,14 +75,14 @@
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="6" class="">{{ 'list.album.empty' | trans({}) }}</td>
+                    <td colspan="5" class="">{{ 'list.photo.empty' | trans({}) }}</td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
 
     <div class="paginator">
-        {{ knp_pagination_render(albums) }}
+        {{ knp_pagination_render(photos) }}
     </div>
 
     <div id="save-form" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
