--- a/web/css/main.css
+++ b/web/css/main.css
@@ -53,6 +53,9 @@ html, body {
 .margin-top {
     margin-top: 20px;
 }
+.margin-top-none {
+    margin-top: 0;
+}
 .margin-x {
     margin-left: 20px;
     margin-right: 20px;
