Add basic handler for Biography

--- a/app/Resources/views/components/_navigationAdmin.html.twig
+++ b/app/Resources/views/components/_navigationAdmin.html.twig
@@ -51,7 +51,7 @@
 	</li>
 
 	<li>
-		<a href="{{ path('admin_biography') }}" title="{{ 'aside.link.biography.label'| trans({}) }}"
+		<a href="{{ path('admin_biography_save') }}" title="{{ 'aside.link.biography.label'| trans({}) }}"
 		   data-toggle="tooltip" data-placement="right" {% block currentAdminBiography %}{% endblock %}>
 			<span class="fa fa-user"></span><label>{{ 'aside.link.biography.label'| trans({}) }}</label>
 		</a>
