--- a/src/PBlondeau/Bundle/WorkBundle/Resources/views/Photo/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/WorkBundle/Resources/views/Photo/Admin/index.html.twig
@@ -23,7 +23,7 @@
         </div>
 
         <div class="col-md-2 text-right">
-            <button class="btn btn-default create-entity"
+            <button class="btn btn-default"
                     data-action=""
                     data-title="{{ 'form.create.title' | trans({})  }}">
                 <span class="fa fa-plus"></span>{{ 'list.action.add' | trans({}) }}
