--- a/src/PBlondeau/Bundle/BiographyBundle/Resources/views/Biography/Public/index.html.twig
+++ b/src/PBlondeau/Bundle/BiographyBundle/Resources/views/Biography/Public/index.html.twig
@@ -1,5 +1,10 @@
 {% extends '::layout.html.twig' %}
 
 {% block body %}
-	BIOGRAPHY :D
+    <article class="media">
+        <img class="img-responsive pull-left" src="{{ asset(biography.webPath) }}" alt="" />
+        <div class="media-body">
+            {{ biography.content |raw }}
+        </div>
+    </article>
 {% endblock %}
