--- a/app/Resources/views/components/_javascripts.html.twig
+++ b/app/Resources/views/components/_javascripts.html.twig
@@ -1,5 +1,5 @@
-<script src="{{ asset('js/jquery.min.js') }}"></script>
-<script src="{{ asset('js/jquery-ui/jquery-ui.min.js') }}"></script>
+<script src="{{ asset('js/jquery/jquery.min.js') }}"></script>
+<script src="{{ asset('js/jquery/jquery-ui.min.js') }}"></script>
 <script src="{{ asset('js/bootstrap.min.js') }}"></script>
 <script src="{{ asset('js/main.js') }}"></script>
 
