Multiple file upload for photos in albums

--- a/app/Resources/views/components/_javascripts.html.twig
+++ b/app/Resources/views/components/_javascripts.html.twig
@@ -1,5 +1,6 @@
 <script src="{{ asset('js/jquery/jquery.min.js') }}"></script>
 <script src="{{ asset('js/jquery/jquery-ui.min.js') }}"></script>
+<script src="{{ asset('js/underscore/underscore-min.js') }}"></script>
 <script src="{{ asset('js/bootstrap.min.js') }}"></script>
 <script src="{{ asset('js/main.js') }}"></script>
 
