--- a/src/PBlondeau/Bundle/WorkBundle/Resources/views/Photo/Admin/deleteModal.html.twig
+++ b/src/PBlondeau/Bundle/WorkBundle/Resources/views/Photo/Admin/deleteModal.html.twig
@@ -17,7 +17,7 @@
                 {{ 'form.delete.modal.action.cancel' | trans({}) }}
             </button>
 
-            <form action="{{ path('admin_work_album_photo_delete', {'id': photo.id}) }}" method="post" class="form-delete">
+            <form action="{{ path('admin_work_photo_delete', {'id': album.id, 'photoId': photo.id   }) }}" method="post" class="form-delete">
                 <input type="hidden" name="_method" value="delete">
                 <button type="submit" class="btn btn-primary">
                     <span class="fa fa-trash-o"></span>
