--- a/src/PBlondeau/Bundle/WorkBundle/Resources/views/Photo/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/WorkBundle/Resources/views/Photo/Admin/index.html.twig
@@ -15,18 +15,18 @@
     </div>
 
     <div class="row">
-        <div class="col-md-9">
+        <div class="col-md-8">
             <table id="photos" class="table table-striped table-hover table-sortable">
                 <thead>
-                <tr>
-                    <th>{{ 'list.photo.header.cover' | trans({}) }}</th>
-                    <th>{{ 'list.photo.header.position' | trans({}) }}</th>
-                    <th>{{ 'list.photo.header.creation' | trans({}) }}</th>
-                    <th>{{ 'list.photo.header.actions' | trans({}) }}</th>
-                </tr>
+                    <tr>
+                        <th>{{ 'list.photo.header.cover' | trans({}) }}</th>
+                        <th>{{ 'list.photo.header.position' | trans({}) }}</th>
+                        <th>{{ 'list.photo.header.creation' | trans({}) }}</th>
+                        <th>{{ 'list.photo.header.actions' | trans({}) }}</th>
+                    </tr>
                 </thead>
 
-                <tbody>
+                <tbody data-action="{{ path('admin_work_photos_update_positions', {'id': album.id}) }}">
                 {% for photo in photos %}
                     <tr id="entity-{{ photo.id }}" data-id="{{ photo.id }}">
                         <td class="preview">
@@ -53,7 +53,7 @@
                     </tr>
                 {% else %}
                     <tr>
-                        <td colspan="6" class="">{{ 'list.photo.empty' | trans({}) }}</td>
+                        <td colspan="4" class="">{{ 'list.photo.empty' | trans({}) }}</td>
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -64,7 +64,7 @@
             </div>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-4">
             {% include "PBlondeauWorkBundle:Photo/Admin:_addForm.html.twig" with {'addPhotoForm': addPhotoForm} only %}
         </div>
     </div>
