--- a/src/PBlondeau/Bundle/WorkBundle/Resources/views/Album/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/WorkBundle/Resources/views/Album/Admin/index.html.twig
@@ -23,6 +23,7 @@
                 <th>{{ 'list.album.header.cover' | trans({}) }}</th>
                 <th>{{ 'list.album.header.title' | trans({}) }}</th>
 	            <th>{{ 'list.album.header.position' | trans({}) }}</th>
+                <th>{{ 'list.album.header.openedCount' | trans({}) }}</th>
                 <th>{{ 'list.album.header.status' | trans({}) }}</th>
                 <th>{{ 'list.album.header.creation' | trans({}) }}</th>
                 <th>{{ 'list.album.header.actions' | trans({}) }}</th>
@@ -37,7 +38,7 @@
                         <span class="fa fa-arrows-v margin-x {% if album.isStopped %}invisible{% endif %}"></span>
                         <img src="{{ asset(album.webPath) }}" class="img-responsive img-thumbnail" alt="" />
                     </td>
-                    <td class="title" width="40%">
+                    <td class="title" width="35%">
                         <a href="{{ path('admin_work_photos', {'id': album.id}) }}" title="{{ album.title }}">
                             {{ album.title|truncate(45) }}
                         </a>
@@ -45,6 +46,9 @@
 	                <td class="position">
 		                {{ album.position }}
 	                </td>
+                    <td class="openedCount">
+                        {{ album.openedCount }}
+                    </td>
                     <td>
                         <span class="badge status-{{ album.status }}">
                             {{ ('list.album.body.status.' ~ album.status) | trans({}) }}
