--- a/src/PBlondeau/Bundle/WorkBundle/Resources/views/Album/Admin/_saveForm.html.twig
+++ b/src/PBlondeau/Bundle/WorkBundle/Resources/views/Album/Admin/_saveForm.html.twig
@@ -12,8 +12,15 @@
         {{ form_row(form.title) }}
     </div>
 
-    <div>
+    <div class="margin-top">
         {{ form_row(form.file) }}
+        {% if not album.isNew %}
+            <div class="row">
+                <div class="col-md-offset-4 margin-bottom">
+                    <img src="{{ asset(album.webPath) }}" class="img-responsive img-thumbnail" alt="" />
+                </div>
+            </div>
+        {% endif %}
     </div>
 
     <div>
