--- a/src/PBlondeau/Bundle/BiographyBundle/Resources/views/Biography/Admin/save.html.twig
+++ b/src/PBlondeau/Bundle/BiographyBundle/Resources/views/Biography/Admin/save.html.twig
@@ -25,9 +25,16 @@
             {{ form_row(form.content) }}
         </div>
 
-        <div>
-            {{ form_row(form.file) }}
-        </div>
+    <div class="margin-top">
+        {{ form_row(form.file) }}
+        {% if not biography.isNew %}
+            <div class="row">
+                <div class="col-md-offset-4 margin-bottom">
+                    <img src="{{ asset(biography.webPath) }}" class="img-responsive img-thumbnail" alt="" />
+                </div>
+            </div>
+        {% endif %}
+    </div>
 
         {{ form_rest(form) }}
 
