--- a/src/PBlondeau/Bundle/ExhibitionBundle/Resources/views/Exhibition/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/ExhibitionBundle/Resources/views/Exhibition/Admin/index.html.twig
@@ -32,11 +32,11 @@
             {% for exhibition in exhibitions %}
                 <tr id="entity-{{ exhibition.id }}" data-id="{{ exhibition.id }}"
                         class="{% if exhibition.isStopped %}sortable-disabled{% endif %}">
-                    <td class="preview">
+                    <td class="preview" width="40%">
                         <span class="fa fa-arrows-v margin-x {% if exhibition.isStopped %}invisible{% endif %}"></span>
                         <img src="{{ asset(exhibition.webPath) }}" class="img-responsive img-thumbnail" alt="" />
                     </td>
-	                <td class="position">
+	                <td>
 		                {{ exhibition.position }}
 	                </td>
                     <td>
