--- a/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/index.html.twig
@@ -32,11 +32,11 @@
             {% for slide in slides %}
                 <tr id="entity-{{ slide.id }}" data-id="{{ slide.id }}"
                         class="{% if slide.isStopped %}sortable-disabled{% endif %}">
-                    <td class="preview">
+                    <td class="preview" width="40%">
                         <span class="fa fa-arrows-v margin-x {% if slide.isStopped %}invisible{% endif %}"></span>
                         <img src="{{ asset(slide.webPath) }}" class="img-responsive img-thumbnail" alt="" />
                     </td>
-	                <td class="position">
+	                <td>
 		                {{ slide.position }}
 	                </td>
                     <td>
