Fix bug on update display position in all admin list

--- a/src/PBlondeau/Bundle/ExhibitionBundle/Resources/views/Exhibition/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/ExhibitionBundle/Resources/views/Exhibition/Admin/index.html.twig
@@ -36,7 +36,7 @@
                         <span class="fa fa-arrows-v margin-x {% if exhibition.isStopped %}invisible{% endif %}"></span>
                         <img src="{{ asset(exhibition.webPath) }}" class="img-responsive img-thumbnail" alt="" />
                     </td>
-	                <td>
+	                <td class="position">
 		                {{ exhibition.position }}
 	                </td>
                     <td>
