--- a/src/PBlondeau/Bundle/PressBundle/Resources/views/PressArticle/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/PressBundle/Resources/views/PressArticle/Admin/index.html.twig
@@ -36,7 +36,7 @@
                         <span class="fa fa-arrows-v margin-x {% if pressArticle.isStopped %}invisible{% endif %}"></span>
                         <img src="{{ asset(pressArticle.webPath) }}" class="img-responsive img-thumbnail" alt="" />
                     </td>
-	                <td>
+	                <td class="position">
 		                {{ pressArticle.position }}
 	                </td>
                     <td>
