--- a/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/index.html.twig
@@ -36,7 +36,7 @@
                         <span class="fa fa-arrows-v margin-x {% if slide.isStopped %}invisible{% endif %}"></span>
                         <img src="{{ asset(slide.webPath) }}" class="img-responsive img-thumbnail" alt="" />
                     </td>
-	                <td>
+	                <td class="position">
 		                {{ slide.position }}
 	                </td>
                     <td>
