--- a/src/PBlondeau/Bundle/WorkBundle/Resources/views/Photo/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/WorkBundle/Resources/views/Photo/Admin/index.html.twig
@@ -33,7 +33,7 @@
                             <span class="fa fa-arrows-v margin-x"></span>
                             <img src="{{ asset(photo.webPath) }}" class="img-responsive img-thumbnail" alt="" />
                         </td>
-                        <td>
+                        <td class="position">
                             {{ photo.position }}
                         </td>
                         <td>{{ photo.creation|date('d-m-Y') }}</td>
