--- a/src/PBlondeau/Bundle/WorkBundle/Resources/views/Photo/Public/index.html.twig
+++ b/src/PBlondeau/Bundle/WorkBundle/Resources/views/Photo/Public/index.html.twig
@@ -27,7 +27,7 @@
             <ul class="gamma-gallery">
                 {% for photo in photos %}
                     <li>
-                        <div data-alt="img03" data-description="<h3>Sky high</h3>" data-max-width="1800"
+                        <div data-alt="img03" data-description="<h3>{{ 'gallery.view.full-screen' | trans }}</h3>" data-max-width="1800"
                              data-max-height="1350">
                             <div data-src="{{ asset(photo.webPath) }}" data-min-width="1300"></div>
                             <div data-src="{{ asset(photo.webPath) }}" data-min-width="1000"></div>
